--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_splash_full_screen.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_splash_full_screen.xml
@@ -26,6 +26,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:text="Krypto.exeⓒ: By Dr.Susilo, University of Wollongong, //or something along the lines"
+            android:textAlignment="center"
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
