--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/app_bar_main.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/app_bar_main.xml
@@ -16,10 +16,33 @@
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
+            android:animateLayoutChanges="true"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+        <!--DUMMY ITEM, TO PREVENT EDIT TEXT FROM RECEIVING FOCUS UPON CREATING ACTIVITY-->
+        <LinearLayout
+            android:id="@+id/dummyLayout"
+            android:layout_width="0px"
+            android:layout_height="0px"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:orientation="horizontal" />
+
+            <EditText
+                android:id="@+id/searchBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="Search"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:visibility="visible"
+                app:layout_constraintBottom_toTopOf="@+id/rv_numbers"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </android.support.v7.widget.Toolbar>>
 
     </android.support.design.widget.AppBarLayout>
 
