--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_main.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_main.xml
@@ -42,9 +42,12 @@
 
                         <TextView
                             android:id="@+id/project_view_cipher_text"
-                            android:textIsSelectable="true"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent" />
+                            android:layout_height="match_parent"
+                            android:fontFamily="monospace"
+                            android:textAlignment="viewStart"
+                            android:textIsSelectable="true"
+                            android:transitionName="project_view_transition" />
 
                     </LinearLayout>
 
