--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/front_page_card.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/front_page_card.xml
@@ -2,115 +2,111 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:animateLayoutChanges="true"
     android:hardwareAccelerated="true"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="4dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card"
-        android:layout_width="wrap_content"
-        android:layout_height="198dp"
+        android:layout_width="0dp"
+        android:layout_height="190dp"
 
         android:layout_marginBottom="4dp"
+
         android:layout_marginTop="4dp"
-
         android:background="@drawable/myrect"
-
         android:clickable="true"
-
         android:foreground="?attr/selectableItemBackground"
-
         app:cardElevation="2dp"
         app:cardPreventCornerOverlap="false"
         app:cardUseCompatPadding="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:id="@+id/card_top_half"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <FrameLayout
-                android:id="@+id/card_cipher_frame_layout"
+            <TextView
+                android:id="@+id/card_preview"
                 android:layout_width="match_parent"
-                android:layout_height="142dp">
-
-                <android.support.constraint.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/card_preview"
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:layout_marginBottom="16dp"
-                        android:layout_marginEnd="16dp"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="16dp"
-                        android:text="PREVIEW"
-                        android:textColor="@color/cardview_dark_background"
-                        android:textSize="12sp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-                </android.support.constraint.ConstraintLayout>
-
-            </FrameLayout>
+                android:layout_height="111dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:fontFamily="monospace"
+                android:text="PREVIEW"
+                android:textColor="@color/cardview_dark_background"
+                android:textSize="10sp"
+                android:transitionName="project_view_transition"
+                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
-                android:id="@+id/card_bottom_layout"
+                android:id="@+id/linearLayout2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:background="#36454f"
+                android:orientation="horizontal"
+                app:layout_constraintTop_toBottomOf="@+id/card_preview">
 
                 <TextView
                     android:id="@+id/card_title"
-                    android:layout_width="533dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="72dp"
+                    android:layout_marginEnd="11dp"
                     android:layout_weight="1"
                     android:padding="16dp"
                     android:text="TITLE"
                     android:textAppearance="@android:style/TextAppearance.Material.Large"
-                    android:textSize="14sp" />
+                    android:textColor="#ffffff"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/card_button_inner"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                <android.support.constraint.ConstraintLayout
+                <FrameLayout
                     android:id="@+id/card_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1">
 
                     <Button
                         android:id="@+id/card_button_inner"
                         style="@style/Widget.AppCompat.Button.Borderless"
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
+                        android:layout_width="28dp"
+                        android:layout_height="20dp"
+                        android:layout_gravity="center"
                         android:layout_marginBottom="16dp"
-                        android:layout_marginEnd="22dp"
-                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="16dp"
                         android:layout_weight="1"
-                        android:background="@mipmap/ic_more_vert_black_24dp"
+                        android:background="@mipmap/ic_more_vert_white_24dp"
                         android:paddingRight="8dp"
                         android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                         android:textSize="8sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/card_title"
                         app:layout_constraintTop_toTopOf="parent" />
-                </android.support.constraint.ConstraintLayout>
+                </FrameLayout>
 
             </LinearLayout>
 
         </LinearLayout>
+
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
