--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/pop_new_project.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/pop_new_project.xml
@@ -8,8 +8,8 @@
 
     <EditText
         android:id="@+id/editText_newProjectNameField"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="45dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -22,15 +22,19 @@
 
     <EditText
         android:id="@+id/editText_cipherInputField"
+        style="@android:style/Widget.Material.EditText"
+        android:paddingLeft="8dp"
         android:layout_width="0dp"
         android:layout_height="180dp"
         android:layout_marginBottom="32dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
+        android:background="@drawable/edit_text_rounded_corner"
         android:ems="10"
-        android:hint="text input"
+        android:hint="Enter project data or read txt from file"
         android:inputType="textMultiLine"
+        android:textAlignment="textStart"
         app:layout_constraintBottom_toTopOf="@+id/button_getCipherTextFromFile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +49,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:backgroundTint="@android:color/background_light"
-        android:text="get from text file"
+        android:text="Read text from file"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
