--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/project_view_sliding_up_panel_block_edit.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/project_view_sliding_up_panel_block_edit.xml
@@ -23,11 +23,19 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:layout_marginTop="16dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/permutation_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/panel_arrow_indicator">
+
+        <Switch
+            android:id="@+id/block_edit_show_original"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Show original text" />
 
         <TextView
             android:id="@+id/seekBar_space_indicator"
