--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,14 +11,10 @@
         <item
             android:id="@+id/nav_encryption_decryption"
             android:icon="?android:attr/fingerprintAuthDrawable"
-            android:title="Encryption/Decryption" />
+            android:title="Quick Encryption / Decryption" />
         <item
             android:id="@+id/nav_about_us"
             android:icon="@android:drawable/ic_dialog_info"
             android:title="About us" />
-        <item
-            android:id="@+id/nav_settings"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Settings" />
     </group>
 </menu>
