--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/project_view_sliding_up_panel_content_tools_list.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/project_view_sliding_up_panel_content_tools_list.xml
@@ -85,7 +85,7 @@
 
     <Button
         android:id="@+id/slidingUpPanelBackButton"
-        style="@style/Widget.AppCompat.Button.Colored"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
