--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_about_us.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_about_us.xml
@@ -3,9 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#ffffff"
     tools:context="com.example.FYP.aardvark_project.GUI.Activity_About_Us">
 
-    <include layout="@layout/content_gui_about_us" />
+    <include
+        layout="@layout/content_gui_about_us"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </FrameLayout>
