--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_analysis.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_analysis.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="10dp"
     android:animateLayoutChanges="true"
 
     android:gravity="center_vertical|center_horizontal"
@@ -13,13 +12,11 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:paddingTop="24dp">
+        android:layout_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical|center_horizontal"
+            android:layout_height="match_parent"
             android:animateLayoutChanges="true"
             android:orientation="vertical">
 
@@ -27,7 +24,8 @@
                 android:id="@+id/analysis_graph_card_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:backgroundTint="@color/charcoalLight">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -50,7 +48,8 @@
                         android:layout_weight="1"
                         android:gravity="center_vertical"
                         android:text="[KEY]"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:textColor="@color/dark_primaryTextColor" />
 
                     <android.support.constraint.ConstraintLayout
                         android:layout_width="match_parent"
@@ -109,6 +108,7 @@
                 android:id="@+id/analysis_period_card_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/charcoalLight"
                 app:cardUseCompatPadding="true">
 
                 <android.support.constraint.ConstraintLayout
@@ -146,6 +146,7 @@
                         android:padding="20dp"
                         android:text="INDICATOR"
                         android:textAlignment="center"
+                        android:textColor="@color/dark_primaryTextColor"
                         android:textSize="10sp"
                         android:visibility="visible"
                         app:layout_constraintBottom_toTopOf="@+id/seekBar_period"
@@ -169,6 +170,7 @@
                 android:id="@+id/analysis_IC_card_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/charcoalLight"
                 android:visibility="visible">
 
                 <LinearLayout
@@ -199,10 +201,10 @@
 
                     <LinearLayout
                         android:id="@+id/IC_view_linear_layout"
-                        android:animateLayoutChanges="true"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="7dp"
+                        android:animateLayoutChanges="true"
                         android:orientation="vertical">
 
                     </LinearLayout>
