--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_frequency_letter.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_frequency_letter.xml
@@ -22,6 +22,7 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/frequency_letter_upper_card_view"
+                android:backgroundTint="@color/charcoalLight"
                 android:layout_width="match_parent"
                 android:layout_height="206dp"
                 android:layout_weight="1">
@@ -48,10 +49,12 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="TextView"
+                android:textColor="@color/dark_primaryTextColor"
                 android:visibility="invisible" />
 
             <android.support.v7.widget.CardView
                 android:id="@+id/frequency_letter_lower_card_view"
+                android:backgroundTint="@color/charcoalLight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
