--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_frequency_period.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_frequency_period.xml
@@ -22,6 +22,7 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/frequency_period_upper_card_view"
+                android:backgroundTint="@color/charcoalLight"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
@@ -75,6 +76,7 @@
                             android:layout_marginStart="163dp"
                             android:layout_marginTop="4dp"
                             android:text="INDICATOR"
+                            android:textColor="@color/dark_primaryTextColor"
                             app:layout_constraintBottom_toTopOf="@+id/period_seekBar"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -109,6 +111,7 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/frequency_period_lower_card_view"
+                android:backgroundTint="@color/charcoalLight"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
@@ -126,6 +129,7 @@
                         android:layout_marginStart="103dp"
                         android:layout_marginTop="110dp"
                         android:text="Please slide the seek bar"
+                        android:textColor="@color/dark_primaryTextColor"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
