--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_splash_full_screen.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_splash_full_screen.xml
@@ -16,35 +16,22 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/Splash_Constraint"
         android:layout_width="match_parent"
+        android:background="#ffffff"
         android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/copyright_text_view"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:text="Krypto.exeⓒ: By Dr.Susilo, University of Wollongong, //or something along the lines"
-            android:textAlignment="center"
-            android:textSize="10sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="138dp"
-            android:layout_height="120dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/copyright_text_view"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            app:srcCompat="@mipmap/splash_logo" />
     </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
