--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/content_main.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/content_main.xml
@@ -14,8 +14,6 @@
         android:id="@+id/rv_numbers"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,8 +32,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/text_view_empty"
+    <ImageView
+        android:id="@+id/image_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -49,6 +47,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/empty_project" />
 
 </android.support.constraint.ConstraintLayout>
