--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/detail_list_view.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/detail_list_view.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:foreground="?attr/selectableItemBackground"
+        android:backgroundTint="@color/charcoalLight"
         android:layout_margin="2dp"
         android:elevation="5dp">
 
@@ -21,14 +22,15 @@
             <TextView
                 android:id="@+id/detail_name"
 
-                android:elevation="8dp"
-
                 android:layout_width="259dp"
+
                 android:layout_height="43dp"
                 android:layout_weight="1"
+                android:elevation="8dp"
                 android:gravity="center_vertical"
                 android:paddingLeft="10dp"
-                android:text="NAME" />
+                android:text="NAME"
+                android:textColor="@color/dark_primaryTextColor" />
 
             <TextView
                 android:id="@+id/detail_value"
@@ -38,6 +40,7 @@
                 android:gravity="center_vertical"
                 android:text="VALUE"
                 android:textAlignment="center"
+                android:textColor="@color/dark_primaryTextColor"
                 tools:layout_editor_absoluteX="16dp"
                 tools:layout_editor_absoluteY="16dp" />
         </LinearLayout>
