--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_main.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_main.xml
@@ -14,6 +14,7 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#ffffff"
             android:orientation="vertical">
 
         <FrameLayout
@@ -46,6 +47,7 @@
                             android:layout_height="match_parent"
                             android:fontFamily="monospace"
                             android:textAlignment="viewStart"
+                            android:textColor="@color/dark_primaryTextColor"
                             android:textIsSelectable="true"
                             android:transitionName="project_view_transition" />
 
