--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/project_view_general_text_input.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/project_view_general_text_input.xml
@@ -38,7 +38,7 @@
 
         <Button
             android:id="@+id/general_positive_button"
-            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
