--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/project_view_sliding_up_panel_main.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/project_view_sliding_up_panel_main.xml
@@ -1,120 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical|center_horizontal"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/panel_arrow_indicator"
         android:layout_width="31dp"
         android:layout_height="28dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ic_arrow_drop_up_black_24dp" />
 
-
-    <Button
-        android:id="@+id/button_undo"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="108dp"
-        android:layout_height="54dp"
-        android:layout_marginBottom="62dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Undo"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button_block_edit"
-        app:layout_constraintTop_toBottomOf="@+id/frequency_graph_period"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/button_block_edit"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="108dp"
-        android:layout_height="54dp"
-        android:layout_marginBottom="62dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Block Edit"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_undo"
-        app:layout_constraintStart_toEndOf="@+id/button_crypto_tools"
-        app:layout_constraintTop_toBottomOf="@+id/frequency_graph_letter" />
-
-    <Button
-        android:id="@+id/button_crypto_tools"
-
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="108dp"
-
-        android:layout_height="54dp"
-        android:layout_marginBottom="62dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:clickable="true"
-        android:foreground="?attr/selectableItemBackground"
-        android:text="Ciphers"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_block_edit"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_graphPopup"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/button_graphPopup"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="108dp"
-        android:layout_height="54dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="44dp"
-        android:layout_weight="1"
-        android:backgroundTint="@android:color/background_light"
-        android:text="Calculate IC"
-        android:textSize="10sp"
-        app:layout_constraintEnd_toStartOf="@+id/permutation_back"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/dummy"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textSize="30sp"
+        android:visibility="invisible" />
 
 
-    <Button
-        android:id="@+id/frequency_graph_letter"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="108dp"
-        android:layout_height="54dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="N-gram Analysis"
-        android:textSize="10sp"
-        app:layout_constraintEnd_toStartOf="@+id/frequency_graph_period"
-        app:layout_constraintStart_toEndOf="@+id/button_graphPopup"
-        app:layout_constraintTop_toBottomOf="@+id/panel_arrow_indicator" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/frequency_graph_period"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="108dp"
-        android:layout_height="54dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="44dp"
-        android:text="Character frequency"
-        android:textSize="10sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/permutation_back"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/button_graphPopup"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="@android:color/background_light"
+            android:text="Calculate IC"
+            android:textSize="10sp" />
 
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/frequency_graph_period"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Character frequency"
+            android:textSize="10sp" />
+
+        <Button
+            android:id="@+id/frequency_graph_letter"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="N-gram Analysis"
+            android:textSize="10sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button_crypto_tools"
+
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:foreground="?attr/selectableItemBackground"
+            android:text="Ciphers"
+            android:textSize="10sp" />
+
+        <Button
+            android:id="@+id/button_block_edit"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Block Edit"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:layout_editor_absoluteX="130dp" />
+
+        <Button
+            android:id="@+id/button_undo"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Undo"
+            android:textSize="10sp" />
+    </LinearLayout>
+
+
+</LinearLayout>
