--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/values/styles.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/values/styles.xml
@@ -3,17 +3,17 @@
     <!-- APPLICATION'S LIGHT THEME (DEFAULT) -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@android:color/darker_gray</item>
-        <item name="colorPrimaryDark">@android:color/darker_gray</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:statusBarColor">@android:color/darker_gray</item>
-        <item name="android:navigationBarColor">@color/colorPrimary</item>
-        <item name="android:colorBackground">@color/colorPrimary</item>
+        <item name="android:statusBarColor">@color/colorPrimary</item>
+        <item name="android:navigationBarColor">@color/charcoal</item>
+        <item name="android:colorBackground">@color/charcoal</item>
         <item name="android:windowContentTransitions">true</item>
-        <item name="android:textColorPrimary">@color/primaryTextColor</item>
+        <item name="android:textColorPrimary">@color/dark_primaryTextColor</item>
 
         <item name="android:windowActionBarOverlay">true</item>
-        <item name="android:textColorPrimaryInverse">@color/dark_primaryLightColor</item>
+        <item name="android:textColorPrimaryInverse">@color/dark_secondaryTextColor</item>
     </style>
 
     <!--APPLICATION'S DARK THEME-->
